--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.5'
+    id 'org.springframework.boot' version '3.3.2'
     id 'io.spring.dependency-management' version '1.1.5'
 }
 
@@ -38,7 +38,7 @@ dependencies {
     implementation "org.springdoc:springdoc-openapi-starter-webflux-ui:${springdocVersion}"
     implementation 'org.postgresql:r2dbc-postgresql'
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'org.flywaydb:flyway-core'
+    runtimeOnly 'org.flywaydb:flyway-core:9.22.0'
     runtimeOnly 'org.postgresql:postgresql'
     runtimeOnly 'org.springframework:spring-jdbc'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
